Sat Apr  9 10:11:21 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: bump version to avoid clash
	* src/dblib/bcp.c:
	- backported important fix from 0.64
	 - small buffer underflow
	 - check better column numbers

Tue Mar 29 19:36:38 EST 2005	JK Lowden <jklowden@schemamania.org>
	* configure.in release 0.63

Tue Mar 29 11:58:15 EST 2005	JK Lowden <jklowden@schemamania.org>
	* README small changes for idiom.
	* configure.in 0.63RC11

Sun Feb 27 09:47:50 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c:
	- make sure we don't core if server charset is not supported

Sat Feb 26 14:13:45 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/alternative_character_sets.h:
	* src/tds/character_sets.h src/tds/encodings.h:
	* src/tds/sybase_character_sets.h:
	- support CP437 charset

Wed Feb  9 20:47:50 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/mem.c: backported small fix for leak

Mon Feb  7 05:38:21 EST 2005	JK Lowden <jklowden@schemamania.org>
	* configure.in INSTALL README 0.63RC10

Thu Feb  3 10:38:00 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/freebcp.c vms/descrip_mms.template vms/getpass.c:
	- applied patch from Craig A. Berry for bcp and VMS

Thu Feb  3 09:24:25 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/bcp.c:
	- applied patch from Craig A. Berry, fix an overflow using utf8

Tue Feb  1 08:37:08 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c: Bill Thompson patch for ct_get_data

Fri Jan 21 10:10:40 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/bcp.c: backport column quoting

Thu Jan 20  9:06:18 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: workaround for long column names

Fri Jan 14 00:08:41 EST 2005	JK Lowden <jklowden@schemamania.org>
	* configure.in 0.63RC9

Mon Jan 10 10:34:05 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/rpc.c: backport small rpc fixes