@@ -68,7 +68,7 @@
 #include <dmalloc.h>
 #endif
 
-static const char software_version[] = "$Id: odbc.c,v 1.345 2004-10-28 12:42:12 freddy77 Exp $";
+static const char software_version[] = "$Id: odbc.c,v 1.345.2.1 2005-05-30 08:19:04 freddy77 Exp $";
 static const void *const no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 static SQLRETURN SQL_API _SQLAllocConnect(SQLHENV henv, SQLHDBC FAR * phdbc);
@@ -89,6 +89,7 @@ static SQLRETURN SQL_API _SQLGetStmtAttr(SQLHSTMT hstmt, SQLINTEGER Attribute, S
 static SQLRETURN SQL_API _SQLColAttribute(SQLHSTMT hstmt, SQLUSMALLINT icol, SQLUSMALLINT fDescType, SQLPOINTER rgbDesc,
 					  SQLSMALLINT cbDescMax, SQLSMALLINT FAR * pcbDesc, SQLLEN FAR * pfDesc);
 SQLRETURN _SQLRowCount(SQLHSTMT hstmt, SQLLEN FAR * pcrow);
+static SQLRETURN SQL_API _SQLFetch(TDS_STMT * stmt);
 static void longquery_cancel(void *param);
 static SQLRETURN odbc_populate_ird(TDS_STMT * stmt);
 static int odbc_errmsg_handler(TDSCONTEXT * ctx, TDSSOCKET * tds, TDSMESSAGE * msg);
@@ -436,15 +437,46 @@ SQLDescribeParam(SQLHSTMT hstmt, SQLUSMALLINT ipar, SQLSMALLINT FAR * pfSqlType,
 	odbc_errs_add(&stmt->errs, "HYC00", "SQLDescribeParam: function not implemented", NULL);
 	ODBC_RETURN(stmt, SQL_ERROR);
 }
+#endif
 
 SQLRETURN SQL_API
-SQLExtendedFetch(SQLHSTMT hstmt, SQLUSMALLINT fFetchType, SQLINTEGER irow, SQLUINTEGER FAR * pcrow, SQLUSMALLINT FAR * rgfRowStatus)
+SQLExtendedFetch(SQLHSTMT hstmt, SQLUSMALLINT fFetchType, SQLINTEGER irow, SQLULEN FAR * pcrow, SQLUSMALLINT FAR * rgfRowStatus)
 {
+	SQLRETURN ret;
+	SQLULEN * tmp_rows;
+	SQLUSMALLINT * tmp_status;
+	SQLULEN tmp_size;
+	SQLLEN * tmp_offset;
 	INIT_HSTMT;
-	odbc_errs_add(&stmt->errs, "HYC00", "SQLExtendedFetch: function not implemented", NULL);
-	ODBC_RETURN(stmt, SQL_ERROR);
+
+	/* still we do not support cursors and scrolling */
+	/* TODO cursors */
+	if (fFetchType != SQL_FETCH_NEXT) {
+		odbc_errs_add(&stmt->errs, "HY106", NULL, NULL);
+		ODBC_RETURN(stmt, SQL_ERROR);
+	}
+
+	/* save and change IRD/ARD state */
+	tmp_rows = stmt->ird->header.sql_desc_rows_processed_ptr;
+	stmt->ird->header.sql_desc_rows_processed_ptr = pcrow;
+	tmp_status = stmt->ird->header.sql_desc_array_status_ptr;
+	stmt->ird->header.sql_desc_array_status_ptr = rgfRowStatus;
+	tmp_size = stmt->ard->header.sql_desc_array_size;
+	stmt->ard->header.sql_desc_array_size = stmt->sql_rowset_size;
+	tmp_offset = stmt->ard->header.sql_desc_bind_offset_ptr;
+	stmt->ard->header.sql_desc_bind_offset_ptr = NULL;
+
+	/* TODO errors are sligthly different ... perhaps it's better to leave DM do this job ?? */
+	ret = _SQLFetch(stmt);
+
+	/* restore IRD/ARD */
+	stmt->ird->header.sql_desc_rows_processed_ptr = tmp_rows;
+	stmt->ird->header.sql_desc_array_status_ptr = tmp_status;
+	stmt->ard->header.sql_desc_array_size = tmp_size;
+	stmt->ard->header.sql_desc_bind_offset_ptr = tmp_offset;
+
+	ODBC_RETURN(stmt, ret);
 }
-#endif
 
 SQLRETURN SQL_API
 SQLForeignKeys(SQLHSTMT hstmt, SQLCHAR FAR * szPkCatalogName, SQLSMALLINT cbPkCatalogName, SQLCHAR FAR * szPkSchemaName,
@@ -3714,7 +3746,7 @@ SQLGetFunctions(SQLHDBC hdbc, SQLUSMALLINT fFunction, SQLUSMALLINT FAR * pfExist
 		API_X(SQL_API_SQLERROR);
 		API_X(SQL_API_SQLEXECDIRECT);
 		API_X(SQL_API_SQLEXECUTE);
-		API__(SQL_API_SQLEXTENDEDFETCH);
+		API_X(SQL_API_SQLEXTENDEDFETCH);
 		API_X(SQL_API_SQLFETCH);
 		API3X(SQL_API_SQLFETCHSCROLL);
 		API_X(SQL_API_SQLFOREIGNKEYS);
@@ -3806,7 +3838,7 @@ SQLGetFunctions(SQLHDBC hdbc, SQLUSMALLINT fFunction, SQLUSMALLINT FAR * pfExist
 		API_X(SQL_API_SQLERROR);
 		API_X(SQL_API_SQLEXECDIRECT);
 		API_X(SQL_API_SQLEXECUTE);
-		API__(SQL_API_SQLEXTENDEDFETCH);
+		API_X(SQL_API_SQLEXTENDEDFETCH);
 		API_X(SQL_API_SQLFETCH);
 		API3X(SQL_API_SQLFETCHSCROLL);
 		API_X(SQL_API_SQLFOREIGNKEYS);
@@ -3897,7 +3929,7 @@ SQLGetFunctions(SQLHDBC hdbc, SQLUSMALLINT fFunction, SQLUSMALLINT FAR * pfExist
 		API_X(SQL_API_SQLERROR);
 		API_X(SQL_API_SQLEXECDIRECT);
 		API_X(SQL_API_SQLEXECUTE);
-		API__(SQL_API_SQLEXTENDEDFETCH);
+		API_X(SQL_API_SQLEXTENDEDFETCH);
 		API_X(SQL_API_SQLFETCH);
 		API3X(SQL_API_SQLFETCHSCROLL);
 		API_X(SQL_API_SQLFOREIGNKEYS);
