@@ -40,6 +40,7 @@ SYMBOL_VECTOR = (SQLAllocConnect=PROCEDURE,-
 		SQLError=PROCEDURE,-
 		SQLExecDirect=PROCEDURE,-
 		SQLExecute=PROCEDURE,-
+		SQLExtendedFetch=PROCEDURE,-
 		SQLFetch=PROCEDURE,-
 		SQLFetchScroll=PROCEDURE,-
 		SQLForeignKeys=PROCEDURE,-
@@ -90,7 +91,6 @@ SYMBOL_VECTOR = (SQLAllocConnect=PROCEDURE,-
 !
 !		SQLBrowseConnect=PROCEDURE,-
 !		SQLDescribeParam=PROCEDURE,-
-!		SQLExtendedFetch=PROCEDURE,-
 !		SQLGetCursorName=PROCEDURE,-
 !		SQLParamOptions=PROCEDURE,-
 !		SQLSetCursorName=PROCEDURE,-
