@@ -1,3 +1,10 @@
+Mon May 30 09:33:52 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
+	* src/dblib/dblib.c:
+	- fix core if dblastrow called after last dbresults
+	* src/dblib/rpc.c: backport fix for blob and rpc
+	* src/odbc/odbc.c vms/odbc_driver_axp.opt win32/FreeTDS.def:
+	- backport SQLExtendedFetch implementation
+
 Sat Apr  9 10:11:21 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
 	* configure.in: bump version to avoid clash
 	* src/dblib/bcp.c:
